[package]
name = "unic"
version = "0.9.0-all"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC: Unicode and Internationalization Crates"
keywords = ["text", "unicode", "internationalization"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[features]
default = []
unstable = ["unic-common/unstable"]  # Rust nightly features
bench_it = ["unic-bidi/bench_it"]
serde = ["unic-bidi/serde"]

[dependencies]
unic-bidi = { path = "bidi/", version = "0.9.0-all" }
unic-char = { path = "char/", version = "0.9.0-all", features = ["std"] }
unic-common = { path = "common/", version = "0.9.0-all" }
unic-emoji = { path = "emoji/", version = "0.9.0-all" }
unic-idna = { path = "idna/", version = "0.9.0-all" }
unic-normal = { path = "normal/", version = "0.9.0-all" }
unic-segment = { path = "segment/", version = "0.9.0-all" }
unic-ucd = { path = "ucd/", version = "0.9.0-all" }

[dev-dependencies]
unic-char-range = { path = "char/range/", version = "0.9.0-all" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
