[package]
name = "unic-ucd"
version = "0.9.0-all"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Database"
keywords = ["text", "unicode", "character-property", "character-database"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-ucd-age = { path = "age/", version = "0.9.0-all" }
unic-ucd-bidi = { path = "bidi/", version = "0.9.0-all" }
unic-ucd-block = { path = "block/", version = "0.9.0-all" }
unic-ucd-case = { path = "case/", version = "0.9.0-all" }
unic-ucd-category = { path = "category/", version = "0.9.0-all" }
unic-ucd-common = { path = "common/", version = "0.9.0-all" }
unic-ucd-hangul = { path = "hangul/", version= "0.9.0-all" }
unic-ucd-ident = { path = "ident/", version = "0.9.0-all" }
unic-ucd-name = { path = "name/", version = "0.9.0-all" }
unic-ucd-name_aliases = { path = "name_aliases/", version = "0.9.0-all" }
unic-ucd-normal = { path = "normal/", version = "0.9.0-all", features = ["unic-ucd-category"] }
unic-ucd-segment = { path = "segment/", version = "0.9.0-all" }
unic-ucd-unihan = { path = "unihan/", version = "0.9.0-all" }
unic-ucd-version = { path = "version/", version = "0.9.0-all" }

[dev-dependencies]
matches = "0.1"
unic-char-basics = { path = "../char/basics/", version = "0.9.0-all" }
unic-char-property = { path = "../char/property/", version = "0.9.0-all" }
unic-char-range = { path = "../char/range/", version = "0.9.0-all" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
