[package]
name = "unic-ucd-common"
version = "0.9.0-all"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Database — Common Properties"
keywords = ["text", "unicode", "character-property", "alphabetic", "numeric"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-char-property = { path = "../../char/property/", version = "0.9.0-all" }
unic-char-range = { path = "../../char/range", version = "0.9.0-all" }
unic-ucd-version = { path = "../version/", version = "0.9.0-all" }

[dev-dependencies]
unic-ucd-category = { path = "../category/", version = "0.9.0-all" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
